bugfix for onhold script not working after refresh & chat not line break if too long bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -481,6 +481,7 @@ button:active {
         & > label {
           font-weight: 400;
           line-height: 1.5;
+          line-break: anywhere;
         }
     }
   }
